--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -7,7 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% block title %}{% endblock %}</title>
   <link rel="stylesheet" href="{% static '/css/output.css' %}">
-  <script src="{% static '/js/htmx.min.js' %}"></script>
 </head>
 <body class="text-base-content h-screen">
 <!-- Navbar -->
@@ -19,5 +18,13 @@
 
   {% endblock %}
 </div>
+
+<script src="{% static 'js/htmx.min.js' %}"></script>
+<script>
+    document.body.addEventListener('htmx:configRequest', (event) => {
+        event.detail.headers['X-CSRFToken'] = '{{ csrf_token }}';
+    });
+</script>
+
 </body>
 </html>
